Add details paragraph 1

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,5 +5,14 @@
          <tittle> This is my webpage about myself </tittle>
     </head>
     <body>
-        <header>
+        <header>This is the main facts about me </header>
+        <article> About me </article>
+        <p>
+            Hello everyone, I would like to introduce everyone about myself. <br>I called myself <strong> a dreamer</strong> who just wandering around to explore and find my own soul. <br>I am quite passionate in <strong>photography and art</strong>. I was <em>a self-learner</em> in <strong>paiting and photography</strong>.<br>I have my personal Instagram account where I share my photographic work, my thoughts and also my artwork. <br>To me, photography and art is not just entertainment activities, it reflects my soul, speak the voice that sometimes I cannot speak out loud. 
+        </p>
+        <hr>
+        <p>
+            About my career path, I was a Senior Account Executive in one Digital Marketing Agency in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. My creativity was locked then. I forgot how much I love to create things. So I decided to quit 
+
+            
 </html>
