--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -12,7 +12,8 @@
         </p>
         <hr>
         <p>
-            About my career path, I was a Senior Account Executive in one Digital Marketing Agency in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. My creativity was locked then. I forgot how much I love to create things. So I decided to quit 
+            About my career path, I was a <strong>Senior Account Executive</strong> in one Digital Marketing Agency in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. <br>My creativity was locked then. I forgot how much I love to create things. So I decided to quit. <br>Then I started to be a Freelancer, doing <strong>Content Marketing</strong> and also, I tried in a new field- <strong>Video Production</strong> as an<strong>Assistant Director</strong> and I realize I also passionate in Video Production. <br> Being an Assistant Director helps me to visualize about every position and their responsibility in the crew, to think more about what I really like and want to do more in the future. I want to be an <strong>Art Director </strong> and I will strengthen my skills and try my best to achieve my dream. <br> If not, I would like to be a <strong> Freelance artist</strong>
+
 
             
 </html>
