Add final details

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,13 +7,17 @@
     <body>
         <header>This is the main facts about me </header>
         <article> About me </article>
-        <p>
-            Hello everyone, I would like to introduce everyone about myself. <br>I called myself <strong> a dreamer</strong> who just wandering around to explore and find my own soul. <br>I am quite passionate in <strong>photography and art</strong>. I was <em>a self-learner</em> in <strong>paiting and photography</strong>.<br>I have my personal Instagram account where I share my photographic work, my thoughts and also my artwork. <br>To me, photography and art is not just entertainment activities, it reflects my soul, speak the voice that sometimes I cannot speak out loud. 
-        </p>
-        <hr>
-        <p>
-            About my career path, I was a <strong>Senior Account Executive</strong> in one Digital Marketing Agency in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. <br>My creativity was locked then. I forgot how much I love to create things. So I decided to quit. <br>Then I started to be a Freelancer, doing <strong>Content Marketing</strong> and also, I tried in a new field- <strong>Video Production</strong> as an<strong>Assistant Director</strong> and I realize I also passionate in Video Production. <br> Being an Assistant Director helps me to visualize about every position and their responsibility in the crew, to think more about what I really like and want to do more in the future. I want to be an <strong>Art Director </strong> and I will strengthen my skills and try my best to achieve my dream. <br> If not, I would like to be a <strong> Freelance artist</strong>
-
-
-            
+        <main>
+            <p>
+             Hello everyone, I would like to introduce everyone about myself. <br>I called myself <strong> a dreamer</strong> who just wandering around to explore and find my own soul. <br>I am quite passionate in <strong>photography and art</strong>. I was <em>a self-learner</em> in <strong>paiting and photography</strong>.<br>I have my personal Instagram account where I share my photographic work, my thoughts and also my artwork. <br>To me, photography and art is not just entertainment activities, it reflects my soul, speak the voice that sometimes I cannot speak out loud. 
+            </p>
+            <hr>
+            <p>
+                About my career path, I was a <strong>Senior Account Executive</strong> in one <em>Digital Marketing Agency</em> in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. <br>My <em>creativity</em> was locked then. I forgot how much I love to create things. So I decided to quit. <br>Then I started to be a Freelancer, doing <strong>Content Marketing</strong> and also, I tried in a new field- <strong>Video Production</strong> as an<strong>Assistant Director</strong> and I realize I also passionate in Video Production. <br> Being an Assistant Director helps me to visualize about every position and their responsibility in the crew, to think more about what I really like and want to do more in the future. I want to be an <strong>Art Director </strong> and I will strengthen my skills and try my best to achieve my dream. <br> If not, I would like to be a <strong> Freelance artist</strong>
+            </p>
+            <hr>
+            <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
+        </main>
+        <footer> About Dan Nguyen. June 2021 </footer>
+    </body>
 </html>
