--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -20,8 +20,8 @@
         <article>
             <hr>
             <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
-        </main>
         </article>
-        <footer> About Dan Nguyen. June 2021 </footer>
+        </main>
+        <footer> Copyright & Copy by Dan Nguyen,2021 </footer>
     </body>
 </html>
