--- a/week-3/index.html
+++ b/week-3/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-</html>
+    <!--h1 is the most important heading we can use 6 levels of headings from h1 to h6-->
+    <!--Site Header-->
+    <header>
+        <h1>Reggie's Coffee Shop</h1>
+    </header>
+    <!--Starting main content of the page-->
+    <main>
+        <!--article of the page, can be understand- alone-->
+        <article>
+            <h2>Our Story</h2>
+            <!--Adding an image-->
+            <img scr="images/coffee-shop.jpg" alt="Coffee cup on pile of coffeefee beans">
+            <p>
+            We are <em>family owned </em> 
+    </html>
