--- a/week-3/index.html
+++ b/week-3/index.html
@@ -11,7 +11,7 @@
         <article>
             <h2>Our Story</h2>
             <!--Adding an image-->
-            <img src="./images/coffee-shop.jpg" alt="Coffee cup on pile of coffeefee beans">
+            <img src="./image/coffee-shop.jpg" alt="Coffee cup on pile of coffeefee beans">
             <p>
             We are <em>family owned </em> 
     </html>
