--- a/week-3/index.html
+++ b/week-3/index.html
@@ -4,14 +4,47 @@
     <!--Site Header-->
     <header>
         <h1>Reggie's Coffee Shop</h1>
+        <nav>
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+
     </header>
     <!--Starting main content of the page-->
     <main>
+        <!--Adding an on page link-->
+        <a href="#treatofweek">Treat of the week</a>
         <!--article of the page, can be understand- alone-->
         <article>
             <h2>Our Story</h2>
             <!--Adding an image-->
             <img src="./image/coffee-shop.jpg" alt="Coffee cup on pile of coffeefee beans">
             <p>
-            We are <em>family owned </em> 
+            We are <em>family owned business </em>. Reggie is the <abbr tittle="Chief Executive Officer">CEO</abbr>> and head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their 10 <sup>th</sup> anniversary together in December 2021.
+            </p>
+
+            <blockquote>
+                We love coffee <cite>-Reggie and Maria</cite>
+            </blockquote>
+    <hr>
+    <section>
+        <h3>Treat of week</h3>
+        <dl>
+            <dt>Name</dt>
+            <dd>Banana Bread </dd>
+            <dt>Calories</dt>
+            <dd>250</dd>
+            <dt>Ingredients</dt>
+            <dd>
+                <ul>
+                    <li>all purpose flour</li>
+                    <li>baking sode</li>
+                    <li>baking powder</li>
+                    <li>salt</li>
+                    <li>butter</li>
+
+
+    </main>
     </html>
