Add External Link

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -44,7 +44,15 @@
                     <li>baking powder</li>
                     <li>salt</li>
                     <li>butter</li>
-
-
+                    <li>sugar</li>
+                    <li>eggs</li>
+                    <li>lemon juice</li>
+                    <li>banana</li>
+                </ul>
+            </dd>
+        </dl>
+        <!--Adding an external link-->
+        <a href="https://sallysbakingaddiction.com/best-banana-cake/" target="_blank">Get the Recipie</a>
+    </section>
     </main>
     </html>
