--- a/week-3/contact.html
+++ b/week-3/contact.html
@@ -17,6 +17,30 @@
     </header>
     <!--Starting main content of the page-->
     <main>
-       
+        <h2>Contact Us</h2>
+        <!--Adding the table for hours-->
+        <table>
+            <caption>Hours of Operation </caption>
+            <thead>
+            <tr>
+                <th>Day</th>
+                <th>Hour</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Mon-Fri</td>
+                <td>6am-9opm</td>
+            </tr>
+            <tr>
+                <td>Sat</td>
+                <td>8am-11pm</td>
+            </tr>
+            <tr>
+                <td>Sun</td>
+                <td>Closed</td>
+            </tr>
+            </tbody>
+            </table>         
     </main>
     </html>
