Add table to index.html

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -54,5 +54,23 @@
         <!--Adding an external link-->
         <a href="https://sallysbakingaddiction.com/best-banana-cake/" target="_blank">Get the Recipie</a>
     </section>
+        <!--Adding section for menu table-->
+        <section>
+            <h3> Menu Specials</h3>
+            <table border>
+                <thead>
+                <tr>
+                    <th coplspan="2">Items</th>
+                    <th rowspan="2">Price </th>
+                </tr>
+                <tr>
+                    <th> Name</th>
+                    <th> Calories </th>
+                </tr>
+                </thead>
+                <tbody>
+            </table>
+        </section>
+
     </main>
     </html>
