--- a/week-3/contact.html
+++ b/week-3/contact.html
@@ -41,6 +41,15 @@
                 <td>Closed</td>
             </tr>
             </tbody>
-            </table>         
+            </table>  
+            <!--Adding section for contact form-->  
+            <section>
+                <h3> We love to hear from you</h3>     
+                <!--Adding a form-->
+                <form action="thanks.html" method="get">
+                    <label for="Full name">Yourname</label>
+                    <input type="text" id="Full name" name="">
+                </form>
+            </section>
     </main>
     </html>
