--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,27 +7,30 @@
     <body>
         <main>
         <h1> DAN NGUYEN</h1>
-        <header>This is the main facts about me </header>
+        <!--Adding image of myself-->
+        <img src="images/Dan'portrait.png" alt="Portrait of myself"> 
+        <header>These are some facts about me that you might want to know </header>
         <h3> About me </h3>
-            <!--I am Dan Nguyen,I am the Junior student in Interactive Media and Designs -->
-            <p>
+        <p> I am Dan Nguyen, an Interactive Media and Design student at Algonquin Colledge, Ottawa </p>
+        <!--Adding my hobbies list -->
+        <p>
              Hello everyone, I would like to introduce everyone about myself. <br>I called myself <strong> a dreamer</strong> who just wandering around to explore and find my own soul. <br>I am quite passionate in <strong>photography and art</strong>. I was <em>a self-learner</em> in <strong>paiting and photography</strong>.<br>I have my personal Instagram account where I share my photographic work, my thoughts and also my artwork. <br>To me, photography and art is not just entertainment activities, it reflects my soul, speak the voice that sometimes I cannot speak out loud. 
-            <ul>To summary, my personal hobbies are</ul>
+         <ul>To summary, my personal hobbies are</ul>
             <li>Paiting</li>
             <li>Movies </li>
             <li>Taking photos </li>
             <li>Listen to music</li>
             <li>Watching sunset</li>
-            </p>
-            <hr>
-            <!--About my career path-->
-            <p>
+        </p>
+        <hr>
+        <!--About my career path-->
+        <p>
             I was a <strong>Senior Account Executive</strong> in one <em>Digital Marketing Agency</em> in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. <br>My <em>creativity</em> was locked then. I forgot how much I love to create things. So I decided to quit. <br>Then I started to be a Freelancer, doing <strong>Content Marketing</strong> and also, I tried in a new field- <strong>Video Production</strong> as an<strong>Assistant Director</strong> and I realize I also passionate in Video Production. <br> Being an Assistant Director helps me to visualize about every position and their responsibility in the crew, to think more about what I really like and want to do more in the future. I want to be an <strong>Art Director </strong> and I will strengthen my skills and try my best to achieve my dream. <br> If not, I would like to be a <strong> Freelance artist</strong>
-            </p>
+        </p>
         </article>
         <article>
             <hr>
-            <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
+        <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
         </article>
         </main>
         <footer> Copyright & Copy by Dan Nguyen,2021 </footer>
