--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -32,6 +32,8 @@
             <hr>
         <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
         </article>
+        <!--Adding navigation to Note page-->
+        For more information, click <a href="notes.html" target="_blank" >Note</a> 
         </main>
         <footer> Copyright & Copy by Dan Nguyen,2021 </footer>
     </body>
