--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -5,7 +5,10 @@
         <tittle>This is the Note page</tittle>
     </head>
     <body>
-        
-    </body>
+        <!--Adding list of 5 tags-->
+        <ul>
 
+    </body>
+<hr>
+Click <a href="index.html" targer=>here</a> to be back at the main page
 </html>
