--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -33,7 +33,9 @@
         <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
         </article>
         <!--Adding navigation to Note page-->
+        <header>
         For more information, click <a href="notes.html" target="_blank" >Note</a> 
+        </header>
         </main>
         <footer> Copyright & Copy by Dan Nguyen,2021 </footer>
     </body>
