--- a/week-3/index.html
+++ b/week-3/index.html
@@ -4,6 +4,7 @@
     <!--Site Header-->
     <header>
         <h1>Reggie's Coffee Shop</h1>
+        <link rel="stylesheet" href="" 
         <nav>
             <ul>
                 <li> <a href="index.html">Home</a></li>
@@ -22,7 +23,7 @@
             <!--Adding an image-->
             <img src="./image/coffee-shop.jpg" alt="Coffee cup on pile of coffeefee beans">
             <p>
-            We are <em>family owned business </em>. Reggie is the <abbr tittle="Chief Executive Officer">CEO</abbr>> and head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their 10 <sup>th</sup> anniversary together in December 2021.
+            We are <em>family owned business </em>. Reggie is the <abbr tittle="Chief Executive Officer">CEO</abbr> and head barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their 10 <sup>th</sup> anniversary together in December 2021.
             </p>
 
             <blockquote>
