--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"
          <tittle> This is my webpage about myself </tittle>
+         <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <main>
