--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,6 +6,17 @@
          <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <header>
+            <!--Navigation between 2 page-->
+            <nav>
+                <ul>
+                    <li><a href="index.html"> Home Page</a></li>
+                    <li><a href="notes.html">Note page</a></li>
+                </ul>
+            </nav>
+        </header>
+        <br>
+
         <main>
         <h1> DAN NGUYEN</h1>
         <!--Adding image of myself-->
