--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -20,6 +20,7 @@
         <main>
         <h1> DAN NGUYEN</h1>
         <!--Adding image of myself-->
+        <p class="site-tittletittle"> My image</p>
         <img src="images/Dan'portrait.png" alt="Portrait of myself"> 
         <header>These are some facts about me that you might want to know </header>
         <h3> About me </h3>
