--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"
-         <tittle> This is my webpage about myself </tittle>
+        <meta charset="UTF-8">
+        <tittle> This is my webpage about myself </tittle>
          <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <header>
+            <h1 class="site-tittle"> DAN NGUYEN</h1>
             <!--Navigation between 2 page-->
             <nav>
                 <ul>
-                    <li><a href="index.html"> Home Page</a></li>
+                    <li><a href="index.html" id="current"> Home Page</a></li>
                     <li><a href="notes.html">Note page</a></li>
                 </ul>
             </nav>
@@ -18,36 +19,37 @@
         <br>
 
         <main>
-        <h1> DAN NGUYEN</h1>
+            <article>
         <!--Adding image of myself-->
-        <img src="images/Dan'portrait.png" alt="Portrait of myself"> 
-        <header>These are some facts about me that you might want to know </header>
-        <h3> About me </h3>
-        <p> I am Dan Nguyen, an Interactive Media and Design student at Algonquin Colledge, Ottawa </p>
+                <img src="images/Dan'portrait.png" alt="Portrait of myself" id="my-image"> 
+                <h2>These are some facts about me that you might want to know </h2>
+                <h1> About me </h1>
+                <p> I am Dan Nguyen, an Interactive Media and Design student at Algonquin Colledge, Ottawa </p>
         <!--Adding my hobbies list -->
-        <p>
+                <p>
              Hello everyone, I would like to introduce everyone about myself. <br>I called myself <strong> a dreamer</strong> who just wandering around to explore and find my own soul. <br>I am quite passionate in <strong>photography and art</strong>. I was <em>a self-learner</em> in <strong>paiting and photography</strong>.<br>I have my personal Instagram account where I share my photographic work, my thoughts and also my artwork. <br>To me, photography and art is not just entertainment activities, it reflects my soul, speak the voice that sometimes I cannot speak out loud. 
-         <ul>To summary, my personal hobbies are</ul>
-            <li>Paiting</li>
-            <li>Movies </li>
-            <li>Taking photos </li>
-            <li>Listen to music</li>
-            <li>Watching sunset</li>
-        </p>
+                    <ul id="hobbies-list">To summary, my personal hobbies are
+                        <li>Paiting</li>
+                        <li>Movies </li>
+                        <li>Taking photos </li>
+                        <li>Listen to music</li>
+                        <li>Watching sunset</li>
+                    </ul>
+                </p>
         <hr>
         <!--About my career path-->
-        <p>
+                <p>
             I was a <strong>Senior Account Executive</strong> in one <em>Digital Marketing Agency</em> in Vietnam, but then I realized after 2 years that the toxic environment didn't fit me well, I just don't feel satisfied enough, because I cannot be myself. <br>My <em>creativity</em> was locked then. I forgot how much I love to create things. So I decided to quit. <br>Then I started to be a Freelancer, doing <strong>Content Marketing</strong> and also, I tried in a new field- <strong>Video Production</strong> as an<strong>Assistant Director</strong> and I realize I also passionate in Video Production. <br> Being an Assistant Director helps me to visualize about every position and their responsibility in the crew, to think more about what I really like and want to do more in the future. I want to be an <strong>Art Director </strong> and I will strengthen my skills and try my best to achieve my dream. <br> If not, I would like to be a <strong> Freelance artist</strong>
-        </p>
-        </article>
-        <article>
-            <hr>
-        <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
-        </article>
+                </p>
+            </article>
+        <!--Adding quote-->    
+            <article>
+                <blockquote>Live peacefully.Send love. Respect others. -<cite>Dan Nguyen</cite></blockquote>
+            </article>
         <!--Adding navigation to Note page-->
-        <header>
+        <h1>
         For more information, click <a href="notes.html" target="_blank" >Note</a> 
-        </header>
+        </h1>
         </main>
         <footer> Copyright & Copy by Dan Nguyen,2021 </footer>
     </body>
