--- a/practice/index.html
+++ b/practice/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width", innitial-scale=1 />
         <tittle> Test navigation hover </tittle>
-        <link rel="stylesheet" href
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div class="navbar">
