--- a/week-7/week-5/index.html
+++ b/week-7/week-5/index.html
@@ -26,8 +26,8 @@
     <main>
 
         <!--adding an on page link-->
-        <a href="#treatofweek">Treat of the Week</a>
-
+        <a href="#treatofweek" class="orange-link">Treat of the Week</a>
+    
         <!--article of the page, can be used as standalone-->
         <article>
             <h2>Our Story</h2>
