--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device width,initial scale=1" />
-    <tittle> Lone Starfish</tittle>
+    <title> Lone Starfish</title>
     <img src="images/lone-starfish-wide.jpg" alt="Starfish banner" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 <br>
 
 <body>
+    <!--Input header-->
+    <h1>LONE STARFISH</h1>
     <!--Navigation-->
     <nav>
         <ul>
@@ -18,9 +20,8 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
-
     <!--Main content-->
-    <h1>Life of a starfish</h1>
+    <h2>Life of a starfish</h2>
     <main>
         <article>
             <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa
@@ -37,7 +38,7 @@
                 drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine
                 Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred
                 danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
-            <img src="images/lone-starfish.jpg" alt="Starfish example" />
+            <img src="images/15-beach-sand-starfish-wallpaper.preview.jpg" alt="Starfish example" />
             <ul>Facts about the starfish:
                 <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
                 <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
