--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -42,12 +42,13 @@
                 Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred
                 danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
             <img src="images/15-beach-sand-starfish-wallpaper.preview.jpg" alt="Starfish example" />
-            <ul>Facts about the starfish:
-                <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-                <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-            </ul>
+            <h3>Fact about the starfish</h3>
+                <ul>
+                    <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                    <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                    <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                    <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                </ul>
         </article>
         <!--Adding form-->
         <form>
