--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"
-        <tittle>This is the HTML Note page</tittle>
+        <title>This is the HTML Note page</title>
     </head>
     <body>
         <header>
