--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -10,18 +10,20 @@
 
 <body>
     <header>
+        <div>  
          <!--Input heading-->
-        <h1>LONE STARFISH</h1>
-        <!--Input image-->
-        <img src="images/lone-starfish-wide.jpg" alt="Starfish banner" />
+        <h1 id="banner">LONE STARFISH</h1>
+        </div>
         <!--Navigation-->
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a> </li>
-                <li><a href="story.html">STORY</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">HOME</a> </li>
+                    <li><a href="story.html">STORY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <article>
@@ -42,14 +44,17 @@
                 Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred
                 danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
             <img src="images/15-beach-sand-starfish-wallpaper.preview.jpg" alt="Starfish example" />
-            <h3>Fact about the starfish</h3>
-                <ul>
-                    <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                    <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-                    <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                    <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-                </ul>
+            <div>
+                <h3>Fact about the starfish</h3>
+                    <ul>
+                        <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                        <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                    </ul>
+            </div>
         </article>
+        <br>
         <!--Adding form-->
         <form>
             <h2> Contact to learn more </h2>
