--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -9,7 +9,7 @@
 <br>
 
 <body>
-    <div>
+    <div class="container"> 
         <header>
              <div>  
                  <!--Input heading-->
