--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -19,9 +19,9 @@
             <div>
                  <nav>
                     <ul>
-                        <li><a href="index.html">HOME</a> </li>
-                        <li><a href="story.html">STORY</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
+                        <li><a href="index.html" id="home">HOME</a> </li>
+                        <li><a href="story.html" id="story">STORY</a></li>
+                        <li><a href="contact.html" id="contact">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
