--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container"> 
         <header>
-             <div>  
+        =-0987654321    `1qo0p=[\
+        ]'[;plgf <div>  
                  <!--Input heading-->
                 <h1 id="banner">LONE STARFISH</h1>
             </div>
