--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -11,8 +11,7 @@
 <body>
     <div class="container"> 
         <header>
-        =-0987654321    `1qo0p=[\
-        ]'[;plgf <div>  
+             <div>  
                  <!--Input heading-->
                 <h1 id="banner">LONE STARFISH</h1>
             </div>
