--- a/midterm-assignment/index.html
+++ b/midterm-assignment/index.html
@@ -60,13 +60,13 @@
                 <h2> Contact to learn more </h2>
                 <fieldset> 
                     <label> Your name</label>
-                    <input type="text"/>
+                    <input type="text" id="name"/>
                     <br>
                     <label> Your email </label>
-                    <input type="text" />
+                    <input type="text" id="email"/>
                     <br>
                     <label> Your message</label>
-                    <textarea name="message" cols="40" rows="4" maxlength="200"></textarea>
+                    <textarea name="message" cols="40" rows="4" maxlength="200" id="message"></textarea>
                     <h3>Would you like to visit the starfish?</h3>
                     <br/>
                     <label for="yes">Yes</label>
