--- a/final-project/index.html
+++ b/final-project/index.html
@@ -160,8 +160,11 @@
                 </form>
                 <form action="contact.html" method="post">
                     <label for="message">Your Message</label>
-                    <textarea id="message"></textarea>
+                    <textarea id="message" rows="5"></textarea>
                 </form>
+            </div>
+            <div class="location">
+                <h3>Location</h3>
             </div>
         </section>
 
