--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <tittle> Three Stars Media</tittle>
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css
+    ">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -23,7 +25,7 @@
                     <li>
                         <form action="search.html" method="GET">
                             <input id="search" type="text" name="search" placeholder="Search">
-                            <button type="submit"><i class="fa fa-search"></i></button>
+                            <button type="submit" ><i class="im im-magnifier"></i></button>
                         </form>
                     </li>
                 </ul>
